feat: add stores basic page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@
     @apply text-sm font-bold;
   }
 
-  form input {
-    @apply text-sm;
+  input {
+    @apply bg-white text-sm;
   }
 
   input[type="text"] {
